--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "zombie": "~1.3.1",
     "jasmine-node": "~1.0.26",
     "nock": "~0.13.3",
-    "mongodb": "~1.1.11"
+    "mongodb": "~1.1.11",
+    "mongoose": "~3.3.1"
   },
   "engines": {
     "node": "~0.8.x",
