--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jasmine-node": "~1.0.26",
     "nock": "~0.13.3",
     "mongodb": "~1.1.11",
-    "mongoose": "~3.3.1"
+    "mongoose": "~3.3.1",
+    "request": "~2.11.4"
   },
   "engines": {
     "node": "~0.8.x",
