--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "nock": "~0.13.3",
     "mongodb": "~1.1.11",
     "mongoose": "~3.3.1",
-    "request": "~2.11.4"
+    "request": "~2.11.4",
+    "database-cleaner": "~0.7.0",
+    "factory-lady": "~0.1.0"
   },
   "engines": {
     "node": "~0.8.x",
