--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "~3.3.1",
     "request": "~2.11.4",
     "database-cleaner": "~0.7.0",
-    "factory-lady": "~0.1.0"
+    "factory-lady": "~0.1.0",
+    "foreman": "0.0.8"
   },
   "engines": {
     "node": "~0.8.x",
