Added configuration variable system

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "database-cleaner": "~0.7.0",
     "factory-lady": "~0.1.0",
     "foreman": "0.0.8",
-    "async": "~0.1.22"
+    "async": "~0.1.22",
+    "konphyg": "~1.2.0"
   },
   "engines": {
     "node": "~0.8.x",
