--- a/config/settings/settings.development.json
+++ b/config/settings/settings.development.json
@@ -2,6 +2,7 @@
   "factory_time": 200,
   "process_time": 400,
   "json_device": {
+    "event_id": "509c0ade864e1d0000000005",
     "resource": "devices",
     "event": "update",
     "data": {
