Added capability to debug application using the DEBUG env variable

--- a/.development.env
+++ b/.development.env
@@ -6,3 +6,4 @@ MONGOLAB_PEOPLE_URL=mongodb://localhost:27017/people_development
 MONGOLAB_JOBS_URL=mongodb://localhost:27017/jobs_development
 PORT=8001
 MAX_ATTEMPTS=1
+DEBUG=true
