Moved max_attempts to the configuration file

--- a/.test.env
+++ b/.test.env
@@ -1,9 +1,7 @@
-NODE_ENV=development
+NODE_ENV=test
 MONGOLAB_SUBSCRIPTIONS_URL=mongodb://localhost:27017/subscriptions_development
 MONGOLAB_DEVICES_URL=mongodb://localhost:27017/devices_development
 MONGOLAB_LOCATIONS_URL=mongodb://localhost:27017/locations_development
 MONGOLAB_PEOPLE_URL=mongodb://localhost:27017/people_development
 MONGOLAB_JOBS_URL=mongodb://localhost:27017/jobs_development
 PORT=8001
-MAX_ATTEMPTS=1
-DEBUG=true
