--- a/.test.env
+++ b/.test.env
@@ -1,7 +1,7 @@
 NODE_ENV=test
-MONGOLAB_SUBSCRIPTIONS_URL=mongodb://localhost:27017/subscriptions_development
-MONGOLAB_DEVICES_URL=mongodb://localhost:27017/devices_development
-MONGOLAB_LOCATIONS_URL=mongodb://localhost:27017/locations_development
-MONGOLAB_PEOPLE_URL=mongodb://localhost:27017/people_development
-MONGOLAB_JOBS_URL=mongodb://localhost:27017/jobs_development
+MONGOLAB_SUBSCRIPTIONS_URL=mongodb://localhost:27017/subscriptions_test
+MONGOLAB_DEVICES_URL=mongodb://localhost:27017/devices_test
+MONGOLAB_LOCATIONS_URL=mongodb://localhost:27017/locations_test
+MONGOLAB_PEOPLE_URL=mongodb://localhost:27017/people_test
+MONGOLAB_JOBS_URL=mongodb://localhost:27017/jobs_test
 PORT=8001
